argocd-apps/jupyterhub/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jupyterhub
  labels:
    name: jupyterhub
