argocd-apps/jupyterhub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub
  namespace: jupyterhub
  labels:
    app: jupyterhub
spec:
  selector:
    app: jupyterhub
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  type: ClusterIP
