argocd-apps/jupyterhub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  namespace: jupyterhub
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/hostname: "jupyter.virington.com"
    external-dns.alpha.kubernetes.io/target: "172.21.252.144"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "jupyter.virington.com"
    secretName: jupyterhub-tls
  rules:
  - host: "jupyter.virington.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterhub
            port:
              number: 8000
